2001-05-15  Jeff Freedman  <jeff@amy.nerble.net>

	* Audio.cc: Fixed "Chipmunk Guardian"!  (Playback speed for
	Guardian is now correct.)

2001-05-14  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* tools/Makefile.am, tools/splitshp.cc: split a shape into its frames
	
2001-05-13  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* exult.spec.in: added exult_bg.flx... ouch!
	
2001-05-12  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* gump_utils.cc: ctrl-alt-s takes screenshots in Modal_gump mode

2001-05-12  Dancer Vesperman <dancer@users.sourceforge.net>
	* configure.in: Extend header file checks: sys/types, sys/socket and
	  netdb.h. Check for getaddrinfo()
	* server.cc: Wrap inclusions in #if HAVE_*
	* exult.cc: #if HAVE_SYS_TIME_H
	* server.cc: included config.h
	* server.cc: use current network API, rather than deprecated, if
	  available.

2001-05-11  Dominik Reichardt <gigdr@tesionmail.de>
	* tools/expack.txt: added small documentation for expack by Marc Winterrowd

2001-05-11  Dancer Vesperman <dancer@users.sourceforge.net>
	* server.cc: std::string, using std::cout/endl/cerr
	* cheat.cc: std::string
	* gumps/Newfile_gump.h: sign a couple types - see below
	* gamedat.cc: WARNING: ifstream.get() doesn't really work with
	unsigned char in all implementations. Nor is it designed to. None of
	these values actually require unsignedness anyway. Cast to (char &)
	* keys.cc: using std::cout

2001-05-10  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* keys.*: cleaned up

2001-05-10  Jeff Freedman  <jeff@amy.nerble.net>

	* In Linux:  Link exult_studio.glade into the Exult data
	directory, and be sure data_path is set in .exult.cfg.  Then,
	hitting ctrl-alt-m (map-editor mode) will run Exult Studio
	(assuming it's in your PATH), already set up for the game you're
	playing. 

2001-05-09  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* keyactions.cc: applied Telemachos' patches for showing inventory

2001-05-08  Willem Jan Palenstijn <palenstijn@wanadoo.nl>